--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,13 @@ charset-normalizer==3.1.0
 frozenlist==1.3.3
 github.py==0.5.0
 idna==3.4
+jsonschema==4.18.4
+jsonschema-specifications==2023.7.1
 multidict==6.0.4
 PyYAML==6.0
+referencing==0.30.0
 requests==2.31.0
+rpds-py==0.9.2
 unidiff==0.7.5
 urllib3==2.0.3
 yarl==1.9.2
